--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro": "^4.16.16",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.9"
   }
 }
